--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "sqlite3": "^4.0.1",
     "underscore": "^1.8.3",
     "uuid": "^3.3.2",
-    "validator": "^3.43.0"
+    "validator": "^3.43.0",
+    "locate-path": "7.1.1"
   },
   "devDependencies": {
     "chai": "^2.2.0",
