--- a/package.json
+++ b/package.json
@@ -7,49 +7,50 @@
     "node": ">=13.0.0"
   },
   "dependencies": {
-    "bluebird": "^2.10.2",
-    "body-parser": "^1.8.4",
-    "connect-redis": "^6.0.0",
-    "connect-session-sequelize": "3.0.0",
-    "cookie-parser": "^1.3.5",
-    "csv": "~0.4.6",
-    "debug": "4.1.0",
-    "express": "^4.13.4",
-    "express-handlebars": "^3.0.0",
-    "express-session": "^1.13.0",
-    "formidable": "~1.0.17",
+    "bluebird": "^3.7.2",
+    "body-parser": "^1.20.0",
+    "connect-redis": "^6.1.3",
+    "connect-session-sequelize": "7.1.4",
+    "cookie-parser": "^1.4.6",
+    "csv": "~6.2.0",
+    "debug": "4.3.4",
+    "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
+    "formidable": "~2.0.1",
     "handlebars": "4.7.7",
-    "html-to-text": "^3.2.0",
-    "ical-generator": "^0.2.7",
-    "joi": "~12.0.0",
-    "ldapauth-fork": "^4.0.2",
-    "moment": "^2.11.2",
-    "moment-timezone": "^0.5.14",
-    "morgan": "^1.3.2",
-    "nconf": "^0.8.4",
+    "html-to-text": "^8.2.0",
+    "ical-generator": "^3.5.1",
+    "joi": "~17.6.0",
+    "ldapauth-fork": "^5.0.5",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.34",
+    "morgan": "^1.10.0",
+    "nconf": "^0.12.0",
     "node-uuid": "^1.4.7",
-    "nodemailer": "^1.11.0",
-    "nodemailer-smtp-transport": "^1.1.0",
+    "nodemailer": "^6.7.7",
+    "nodemailer-smtp-transport": "^2.7.4",
     "optimist": "^0.6.1",
-    "passport": "^0.3.2",
+    "passport": "^0.6.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
-    "redis": "^3.1.2",
-    "sequelize": "^3.19.2",
-    "sequelize-cli": "6.4.0",
-    "serve-favicon": "^2.1.7",
-    "sqlite3": "^4.0.1",
-    "underscore": "^1.8.3",
-    "uuid": "^3.3.2",
-    "validator": "^3.43.0",
-    "locate-path": "7.1.1"
+    "redis": "^4.2.0",
+    "sequelize": "^6.21.3",
+    "sequelize-cli": "6.4.1",
+    "serve-favicon": "^2.5.0",
+    "sqlite3": "^5.0.10",
+    "underscore": "^1.13.4",
+    "uuid": "^8.3.2",
+    "validator": "^13.7.0",
+    "locate-path": "^7.1.1",
+    "psl": "^1.9.0"
   },
   "devDependencies": {
-    "chai": "^2.2.0",
-    "mocha": "^6.2.2",
-    "node-sass": "^4.5.3",
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
+    "node-sass": "^7.0.1",
     "request-promise": "^4.2.2",
-    "selenium-webdriver": "2.53.3"
+    "selenium-webdriver": "4.3.1"
   },
   "scripts": {
     "test": "node node_modules/mocha/bin/mocha --recursive t",
