--- a/service.yaml
+++ b/service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels: #PODS
-    apps: sampleapp
-  name: sampleapp
+    apps: timeoffapp
+  name: timeoffapp
   namespace: default
 spec:
   type: LoadBalancer
@@ -12,5 +12,5 @@ spec:
       protocol: TCP
       targetPort: 3000
   selector:
-    app: sampleapp
+    app: timeoffapp
   sessionAffinity: None
